--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.41",
+    "@types/styled-components": "^5.1.1",
     "@zeit/next-source-maps": "^0.0.3",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1",
     "typescript": "^3.9.6"
   },
   "devDependencies": {
-    "@types/node": "^14.0.14"
+    "@types/node": "^14.0.14",
+    "babel-plugin-styled-components": "^1.10.7"
   }
 }
