--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "myke-roly",
   "license": "MIT",
   "scripts": {
-    "dev": "next"
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build"
   },
   "dependencies": {
     "@types/next": "^9.0.0",
