--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.6"
   },
