--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "Personal Page",
+  "description": "Porfolio",
   "main": "index.js",
-  "repository": "https://github.com/myke-roly/personal-page.git",
+  "repository": "https://github.com/myke-roly/Portfolio",
   "author": "myke-roly",
   "license": "MIT",
   "scripts": {
@@ -12,19 +12,19 @@
     "build": "next build"
   },
   "dependencies": {
-    "@types/next": "^9.0.0",
-    "@types/react": "^16.9.41",
-    "@types/styled-components": "^5.1.1",
-    "@zeit/next-source-maps": "^0.0.3",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
-    "styled-components": "^5.1.1",
-    "typescript": "^3.9.6"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "typescript": "^3.9.6",
     "@types/node": "^14.0.14",
+    "@types/next": "^9.0.0",
+    "@types/react": "^16.9.41",
+    "@types/styled-components": "^5.1.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.7"
   }
