--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "firebase": "^9.13.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,13 +20,13 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "typescript": "^3.9.6",
-    "@types/node": "^14.0.14",
     "@types/next": "^9.0.0",
+    "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/styled-components": "^5.1.1",
     "@zeit/next-source-maps": "^0.0.3",
     "babel-plugin-inline-react-svg": "^1.1.1",
-    "babel-plugin-styled-components": "^1.10.7"
+    "babel-plugin-styled-components": "^1.10.7",
+    "typescript": "^3.9.6"
   }
 }
