--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
-    "@types/node": "^14.0.14",
+    "@types/node": "18.11.9",
     "@types/react": "^16.9.41",
     "@types/styled-components": "^5.1.1",
     "@zeit/next-source-maps": "^0.0.3",
